{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 217,
  "lineage": "8cc8169c-e6d4-d5b4-32d2-334b0863b368",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-04264a49bd90f6777",
            "id": "rtb-04264a49bd90f6777",
            "owner_id": "287277827641",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cef1050a1cfdae1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-route-table-public"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "test-tgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:287277827641:transit-gateway/tgw-02ad8d7082ed68396",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit gateway testing scenario with 2 vpc's",
            "dns_support": "enable",
            "id": "tgw-02ad8d7082ed68396",
            "owner_id": "287277827641",
            "tags": {
              "Name": "Transit_gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tgw-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0be5c1cce4eac0971",
            "tags": {
              "Name": "tgw-rt"
            },
            "transit_gateway_id": "tgw-02ad8d7082ed68396"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tgw-vpc1-associa",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0be5c1cce4eac0971_tgw-attach-0efb8221a7b53dfaf",
            "resource_id": "vpc-06883a509840685ec",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0efb8221a7b53dfaf",
            "transit_gateway_route_table_id": "tgw-rtb-0be5c1cce4eac0971"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_vpc_atta_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tgw-vpc1-propaga",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0be5c1cce4eac0971_tgw-attach-0efb8221a7b53dfaf",
            "resource_id": "vpc-06883a509840685ec",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0efb8221a7b53dfaf",
            "transit_gateway_route_table_id": "tgw-rtb-0be5c1cce4eac0971"
          },
          "depends_on": [
            "aws_ec2_transit_gateway_route_table.tgw-rt",
            "aws_ec2_transit_gateway_vpc_attachment.tgw_vpc_atta_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_vpc_atta_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0efb8221a7b53dfaf",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-03a795524fa68a820",
              "subnet-09faee187c053fa4b",
              "subnet-0dc8271203c5e6fd0",
              "subnet-0f462ab7f53546630"
            ],
            "tags": {
              "Name": "tgw-attach-vpc1"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": false,
            "transit_gateway_id": "tgw-02ad8d7082ed68396",
            "vpc_id": "vpc-06883a509840685ec",
            "vpc_owner_id": "287277827641"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.test-tgw",
            "aws_subnet.private-1a",
            "aws_subnet.private-1b",
            "aws_subnet.public-1a",
            "aws_subnet.public-1b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03d595591033995fb",
            "domain": "vpc",
            "id": "eipalloc-0ac59cce001fd7949",
            "network_interface": "eni-01fb1576666a58587",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-82-88-238.compute-1.amazonaws.com",
            "public_ip": "3.82.88.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "default"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03cef1050a1cfdae1",
            "owner_id": "287277827641",
            "tags": {
              "Name": "default"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac59cce001fd7949",
            "id": "nat-01c68e1eb8f11b31b",
            "network_interface_id": "eni-01fb1576666a58587",
            "private_ip": "10.0.1.79",
            "public_ip": "3.82.88.238",
            "subnet_id": "subnet-09faee187c053fa4b",
            "tags": {
              "Name": "default"
            }
          },
          "depends_on": [
            "aws_eip.this",
            "aws_internet_gateway.this",
            "aws_subnet.public-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0945c5160e24c8587",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "287277827641",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-03a795524fa68a820",
              "subnet-09faee187c053fa4b",
              "subnet-0dc8271203c5e6fd0",
              "subnet-0f462ab7f53546630"
            ],
            "tags": {
              "Name": "Network-Acl"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_subnet.private-1a",
            "aws_subnet.private-1b",
            "aws_subnet.public-1a",
            "aws_subnet.public-1b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05558bac9e5a82c121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-01c68e1eb8f11b31b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05558bac9e5a82c12",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03cef1050a1cfdae1",
            "id": "r-rtb-04264a49bd90f67771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04264a49bd90f6777",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_default_route_table.this",
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05558bac9e5a82c12",
            "owner_id": "287277827641",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-01c68e1eb8f11b31b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-route-table-private"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0bd74be16cf77b4",
            "route_table_id": "rtb-05558bac9e5a82c12",
            "subnet_id": "subnet-0f462ab7f53546630"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7b2f33acfea0f7",
            "route_table_id": "rtb-05558bac9e5a82c12",
            "subnet_id": "subnet-0dc8271203c5e6fd0"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8eaf51c5b1a7e5",
            "route_table_id": "rtb-04264a49bd90f6777",
            "subnet_id": "subnet-09faee187c053fa4b"
          },
          "depends_on": [
            "aws_default_route_table.this",
            "aws_subnet.public-1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0615fbb9fbd4a28ab",
            "route_table_id": "rtb-04264a49bd90f6777",
            "subnet_id": "subnet-03a795524fa68a820"
          },
          "depends_on": [
            "aws_default_route_table.this",
            "aws_subnet.public-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287277827641:subnet/subnet-0f462ab7f53546630",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/25",
            "id": "subnet-0f462ab7f53546630",
            "map_public_ip_on_launch": false,
            "owner_id": "287277827641",
            "tags": {
              "Name": "aws-subnet-private-1a"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287277827641:subnet/subnet-0dc8271203c5e6fd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/25",
            "id": "subnet-0dc8271203c5e6fd0",
            "map_public_ip_on_launch": false,
            "owner_id": "287277827641",
            "tags": {
              "Name": "aws-subnet-private-1b"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287277827641:subnet/subnet-09faee187c053fa4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/25",
            "id": "subnet-09faee187c053fa4b",
            "map_public_ip_on_launch": true,
            "owner_id": "287277827641",
            "tags": {
              "Name": "aws-subnet-public-1a"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287277827641:subnet/subnet-03a795524fa68a820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/25",
            "id": "subnet-03a795524fa68a820",
            "map_public_ip_on_launch": true,
            "owner_id": "287277827641",
            "tags": {
              "Name": "aws-subnet-public-1b"
            },
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287277827641:vpc/vpc-06883a509840685ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a81cc8037c97440",
            "default_route_table_id": "rtb-04264a49bd90f6777",
            "default_security_group_id": "sg-05f9a8b2174a514c2",
            "dhcp_options_id": "dopt-46a4513c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06883a509840685ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04264a49bd90f6777",
            "owner_id": "287277827641",
            "tags": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "private_endpoint_s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15"
            ],
            "id": "vpce-02277df1b087f623a",
            "owner_id": "287277827641",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05558bac9e5a82c12"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06883a509840685ec"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "public_endpoint_s3",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}